--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <p>✔ Exercício prático de reprogramação mental para autocontrole</p>
     <p>✔ Passo a passo simples para reduzir ansiedade digital</p>
     <img src="Ebook_amostra2.jpeg" alt="Ebook amostra 2">
-    <a href="https://drive.google.com/file/d/1dhQvEUSFFMRn5dEX2Z5t3RF5Fwpzy_rN/view?usp=drivesdk" 
+    <a href="O Segredo da mente tranquila WPS Office.pdf" 
        class="btn-drive" target="_blank">📥 Seu Guia do bolso</a>
   </section>
 
@@ -277,4 +277,5 @@ footer a:hover {
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   <script src="./script.js"></script>
 </body>
+
 </html>
