--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Configuração e Produtividade Mental</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
@@ -67,6 +68,10 @@
       <a href="https://instagram.com/HenryBrain05" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
       <a href="https://www.youtube.com/@henrybrains" target="_blank"><ion-icon name="logo-youtube"></ion-icon></a>
       <a href="https://www.linkedin.com/in/modebravhlabs-undefined-5204933ab" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
+      <a href="https://www.tiktok.com/@teuPerfil" target="_blank">
+   <i class="fa-brands fa-tiktok"></i>
+ </a>
+
     </div>
     <p>&copy; 2026 ModeBravhLabs - Todos os Direitos Reservados.</p>
     <a href="#">👉 Conheça a ModeBravhLabs</a>
@@ -233,6 +238,17 @@ footer a:hover {
   color: #ff4d4d;
 }
 
+  .fa-tiktok {
+  font-size: 40px;   /* tamanho do ícone */
+  color: #000;       /* cor padrão */
+  transition: color 0.3s;
+}
+
+.fa-tiktok:hover {
+  color: #ff0050;    /* cor ao passar o mouse */
+}
+
+
 /* Responsividade */
 @media (max-width: 768px) {
   header h1 {
@@ -279,3 +295,4 @@ footer a:hover {
 </body>
 
 </html>
+
