--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <a href="https://instagram.com/HenryBrain05" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
       <a href="https://www.youtube.com/@henrybrains" target="_blank"><ion-icon name="logo-youtube"></ion-icon></a>
       <a href="https://www.linkedin.com/in/modebravhlabs-undefined-5204933ab" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
-      <a href="https://www.tiktok.com/@teuPerfil" target="_blank">
+      <a href="https://www.tiktok.com/@henriquesjoao11" target="_blank">
    <i class="fa-brands fa-tiktok"></i>
  </a>
 
@@ -295,4 +295,5 @@ footer a:hover {
 </body>
 
 </html>
+
 
