--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     </div>
     <p>&copy; 2026 ModeBravhLabs - Todos os Direitos Reservados.</p>
-    <a href="#">👉 Conheça a ModeBravhLabs</a>
+    <a href="https://modebravlabs-sudo.github.io/pagina-principal-da-empresa-actualizada/">👉 Conheça a ModeBravhLabs</a>
   </footer>
 
 
@@ -295,6 +295,7 @@ footer a:hover {
 </body>
 
 </html>
+
 
 
 
